# advanced-c

./: README.md
1-gdb/src/: exo_nom.c  space.c  xtrem.c
2-valgrind/src/: bug1.c  exo1.c
2-valgrind/src/examples/testHash/: README  config.h  hash.c  hash.h  hello_world.Makefile  hello_world.Makefile.simple  hello_world.c  makefile  testHash.c
2-valgrind/src/examples/watchpoint/: Makefile  README  test.c
4-svn-introduction/src/: modification_1.txt  mp3.tgz  mp3_version_0.0.tgz  patch_0.0_0.2.diff  patch_0.0_0.2.diff.tgz  pg106_login_0.0.tgz  pg106_login_0.0_0.1.diff  pg106_login_0.0_0.1.diff.tgz  pg106_login_0.1.tgz
4-svn-introduction/src/pg106_login_0.1/: main.c  makefile  mp3.c  mp3.h
5-svn-workflow/BRANCH/depot/branches/1.0/mp3/example/: main.c  makefile
5-svn-workflow/BRANCH/depot/branches/1.0/mp3/src/: mp3.h
5-svn-workflow/BRANCH/depot/releases/1.0.0/mp3/: makefile
5-svn-workflow/BRANCH/depot/releases/1.0.0/mp3/src/: makefile  mp3.c
5-svn-workflow/BRANCH/depot/trunk/documentation/: doxygen.conf  makefile
5-svn-workflow/BRANCH/depot/trunk/mp3/: CMakeLists.txt
5-svn-workflow/BRANCH/depot/trunk/mp3/example/: CMakeLists.txt
5-svn-workflow/BRANCH/depot/trunk/mp3/src/: CMakeLists.txt  mp3.c
6-cmake/example/: CMakeLists.txt  boggles.py  communication.c  communication.h  communication_mock_data.c  communication_mock_data.h  communication_mock_file.c  example.c
7-cov/: simple.c  simple.c.gcov  simple.gcda  simple.gcno
